--- a/styles/style.css
+++ b/styles/style.css
@@ -1,32 +1,424 @@
 .page {
-    min-width: 1100px;
-    /* мы ещё не умеем делать мобильную версию сайта, */
-    /* поэтому выше установлена минимальная ширина страницы */
-    max-width: 1600px;
-    /* выше установили ограничение по максимальной ширине */
-    margin: 0 auto;
-    /* выше для экранов больше 1600px отцентрировали весь контент */
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
+  font-family: Arial,"Helvetica Neue",sans-serif;
 }
+
+/* div, h1,h2, p, ul, li {
+    border: solid 1px red;
+} */
+
+/* start header-style */
 
 .header {
-    height: 100vh;
-    min-height: 600px;
-    max-height: 756px;
-    /* выше установили ограничения для секции */
+  height: 100vh;
+  min-height: 600px;
+  max-height: 756px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: #f2f2f2;
+  position: relative;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__title {
+  width: 730px;
+  display: flex;
+  align-items: center;
+  margin: 0px 0px 0px 64px;
+  z-index: 2;
+  font-size: 102px;
+  font-weight: bold;
+  line-height: 96px;
+}
+
+.header__subtitle {
+  width: 388px;
+  bottom: 30px;
+  left: 64px;
+  position: absolute;
+  margin: 0 auto;
+  z-index: 2;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  background-size: 100%;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  z-index: 1;
+}
+
 .header__square-pic {
-    height: 568px;
-    width: 568px;
+  height: 568px;
+  width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  right: 0;
+  top: 64px;
+  z-index: 0;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+/* end header-style */
+
+
+
+/* start logo-style */
+
+.logo {
+  width: 183px;
+  height: 32px;
+}
+
+.logo_place_header {
+  position: absolute;
+  background-image: url(../images/logo.svg);
+  top: 30px;
+  left: 64px;
+}
+
+.logo_place_footer {
+  background-image: url(../images//logo_white.svg);
+}
+
+/* end logo-style */
+
+
+
+/* Start Description-style */
+
+.description {
+  padding: 100px 0;
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 0 auto;
+  padding: 0px;
+  list-style: none;
+ /* в каком смысле использовать min-height "с осторожностью" :)?
+ Кажется, он тут вообще не нужен */
+}
+
+.two-columns__brief {
+  width: 175px;
+  margin: 0;
+  color: #2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+}
+
+.two-columns__main-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 80%;
+  min-width: 784px;
+  list-style: none;
+  padding: 0px;
+  margin: 0 0;
+}
+
+.two-columns__paragraph {
+  margin: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph_margin {
+  margin: 30px 0;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+}
+
+/* end Description-style */
+
+
+
+/* start Digits-style */
+
+.digits {
+  padding-bottom: 100px;
+}
+
+.section-title {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section-title__header {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 69px;
+}
+
+.section-subtitle__header {
+  margin-top: 20px;
+  margin-bottom: 0px;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+}
+
+.table {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+  margin: 0 auto;
+  padding: 0px;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+  list-style: none;
+}
+
+.table__heading {
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: bold;
+}
+
+.table__text {
+  font-size: 18px;
+  line-height: 1.2;
+  margin-top: 20px;
+}
+
+/* end Digits-style */
+
+
+
+/* Start dark-theme style */
+
+.section-title__header_theme_dark {
+  color: white;
+}
+
+.section-subtitle__subheader_theme_dark {
+  margin-top: 20px;
+  margin-bottom: 0px;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+  color: white;
+}
+
+.table_theme_dark {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
+}
+
 .table__cell_theme_dark {
-    width: 200px;
-    color: white;
-    margin-right: 0;
-    margin-top: 80px;
+  width: 200px;
+  color: white;
+  margin-right: 0;
+  margin-top: 80px;
+  margin-bottom: 0px;
 }
 
+.table__heading_theme_dark {
+  color: white;
+}
+
+.table__text_theme_dark {
+  color: white;
+}
+
+/*end dark-theme style */
+
+
+/* start Feinman-style */
+
+.feinman {
+  background-color: #F2F2F2;
+  height: 790px;
+  position: relative;
+  padding-top: 100px;
+}
+
+.feinman__title {
+  margin: 0 auto;
+  width: 648px;
+  position: relative;
+  z-index: 2;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+}
+
+.feinman__subtitle {
+  margin: 0 auto;
+  margin-top: 70px;
+  margin-bottom: 0;
+  position: relative;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  z-index: 2;
+  font-weight: normal;
+}
+
+.feinman__link {
+ position: absolute;
+ right: 48px;
+ top: 50%;
+ margin: 0 auto;
+ z-index:  5;
+ line-height: 51px;
+ font-size: 36px;
+ color: black;
+ text-decoration: none;
+}
+
+.feinman__link:hover { /* оставил для красоты :) */
+  color: #2f80ed;
+}
+
+.feinman__image {
+  bottom: 0px;
+  width: 867px;
+  height: 637px;
+  z-index: 0;
+  position: absolute;
+}
+
+/* end Feinman-style */
+
+
+
+/* start kaufman-style */
+
+.kaufman {
+  position: relative;
+  background-color: #1f1f1f;
+  margin: 0 auto;
+  padding: 90px 0px;
+  overflow: hidden;
+}
+
+.kaufman__triangle {
+  background-image: url(../images/triangle.svg);
+  position: absolute;
+  width: 877px;
+  height: 877px;
+  right: -210px;
+  top: 0;
+  background-size: 100%;
+}
+
+/* end Kaufman-style */
+
+
+
+/* start Footer-style */
+
+.footer {
+  background-color: #1f1f1f;
+  color: white;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  margin: 0 auto
+}
+
+.footer__columns {
+  min-height: 350px;
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+  flex-basis: 711px;
+}
+
+ /* не используемые ЭМ */
+/*
+.footer__column{
+}
+
+.footer__column_content_social {
+
+}
+.footer__column_content_info {
+}
+*/
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+  flex-wrap: nowrap;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  list-style: none;
+  padding: 0px;
+  word-wrap: break-word;
+  color: white;
+  text-decoration: none;
+}
+
+.footer__author {
+  align-self: flex-start;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 18 0 auto;
+}
+
+.footer__social-icon{
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
+}
+.footer__link {
+  color: white;
+  text-decoration: none;
+}
+
+/* end foorer-style */
