--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,9 @@
   font-family: Arial,"Helvetica Neue",sans-serif;
 }
 
-/* div, h1,h2, p, ul, li {
+div, h1,h2, h3, p, ul, li {
     border: solid 1px red;
-} */
+}
 
 /* start header-style */
 
@@ -119,6 +119,7 @@
   color: #2f80ed;
   line-height: 1.2;
   font-size: 18px;
+  font-weight: normal;
 }
 
 .two-columns__main-text{
@@ -133,15 +134,18 @@
 }
 
 .two-columns__paragraph {
-  margin: 0;
+  margin-bottom: 30px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
 
-.two-columns__paragraph_margin {
-  margin: 30px 0;
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0px;
 }
+/* .two-columns__paragraph_margin {
+  margin: 30px 0;
+} */
 
 .two-columns__span-accent {
   font-weight: bold;
@@ -161,29 +165,33 @@
   width: 60%;
   margin: 0 auto;
   text-align: center;
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 69px;
 }
 
 .section-subtitle {
   width: 60%;
   margin: 0 auto;
   text-align: center;
-}
-
-.section-title__header {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  font-size: 60px;
-  font-weight: bold;
-  line-height: 69px;
-}
-
-.section-subtitle__header {
-  margin-top: 20px;
-  margin-bottom: 0px;
+  /* перенесено из .section-subtitle__header */
+  padding-top: 20px;
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
 }
+
+/* .section-title__header {
+  margin-top: 0px;
+  margin-bottom: 0px;
+
+} */
+
+/* .section-subtitle__header {
+  margin-top: 20px;
+  margin-bottom: 0px;
+
+} */
 
 .table {
   display: flex;
@@ -204,6 +212,7 @@
 }
 
 .table__heading {
+  margin: 0 auto;
   font-size: 24px;
   line-height: 1.15;
   font-weight: bold;
@@ -221,12 +230,12 @@
 
 /* Start dark-theme style */
 
-.section-title__header_theme_dark {
+.section-title_theme_dark {
   color: white;
 }
 
-.section-subtitle__subheader_theme_dark {
-  margin-top: 20px;
+.section-subtitle_theme_dark {
+
   margin-bottom: 0px;
   font-size: 24px;
   font-weight: normal;
@@ -387,17 +396,22 @@
 }
 
 .footer__column-heading {
+  margin: 0 auto;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
 }
 
 .footer__column-links {
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
   list-style: none;
   padding: 0px;
+  line-height: 30px;
+  font-size: 18px;
+}
+
+.footer__column-link {
+
+  font-weight: normal;
   word-wrap: break-word;
   color: white;
   text-decoration: none;
@@ -408,7 +422,7 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  margin: 18 0 auto;
+  margin: 18px 0;
 }
 
 .footer__social-icon{
