Изменения верстки + CSS после ревью 1

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,9 @@
   font-family: Arial,"Helvetica Neue",sans-serif;
 }
 
-div, h1,h2, h3, p, ul, li {
+/* div, h1,h2, h3, p, ul, li {
     border: solid 1px red;
-}
+} */
 
 /* start header-style */
 
