--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,4 @@
-@import url(__author/footer__author.css);
+@import url(./__author/footer__author.css);
 @import url(./__columns/footer__columns.css);
 @import url(./__column/footer__column.css);
 @import url(./__column-heading/footer__column-heading.css);
