--- a/blocks/footer/__column-heading/footer__column-heading.css
+++ b/blocks/footer/__column-heading/footer__column-heading.css
@@ -1,5 +1,6 @@
 .footer__column-heading {
-  margin: 0 auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
