--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,16 +1,5 @@
-@keyframes rotate-triangle {
-  from {
-    transform: rotate(0deg);
-  }
-  to
-    {
-    transform: rotate(360deg);
-    }
-}
-
-
 .kaufman__triangle {
-  background-image: url(/images/triangle.svg);
+  background-image: url(../../../images/triangle.svg);
   position: absolute;
   width: 877px;
   height: 877px;
@@ -18,5 +7,4 @@
   top: 0;
   z-index: 0;
   background-size: 100%;
-  animation: rotate-triangle 20s linear infinite;
 }
