--- a/blocks/logo/_place/logo_place_footer.css
+++ b/blocks/logo/_place/logo_place_footer.css
@@ -1,4 +1,4 @@
 .logo_place_footer {
-  background-image: url(/images/logo/logo_white.svg);
+  background-image: url(../../../images/logo/logo_white.svg);
   height: 35px;
 }
