--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -1,6 +1,6 @@
 .logo_place_header {
   position: absolute;
-  background-image: url(/images/logo/logo.svg);
+  background-image: url(../../../images/logo/logo.svg);
   top: 30px;
   left: 64px;
   height: 32px;
