--- a/pages/index.css
+++ b/pages/index.css
@@ -2,8 +2,10 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/content/content.css);
 @import url(../blocks/logo/logo.css);
+@import url(../blocks/rotation/rotation.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/description/description.css);
+@import url(../blocks/two-columns/two-columns.css);
 @import url(../blocks/section-title/section-title.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
 @import url(../blocks/technics/technics.css);
@@ -18,8 +20,8 @@
 @import url(../blocks/resources/resources.css);
 @import url(../blocks/footer/footer.css);
 
-/* div, h1, h2, h3, ul, li, p, img, section, iframe, a {
+div, h1, h2, h3, ul, li, p, img, section, iframe, a {
   border: 1px red solid;
-} */
+}
 
 
